--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -1,16 +1,22 @@
 <html lang="en" class="no-js">
 	<head>
-	{% load static %}
+	<!-- {% load static %} -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Recruitto</title>
-		<link href="{% static 'css/bootstrap.min.css' %}"" rel="stylesheet">
-		<link href="{% static 'css/animate.css' %}" rel="stylesheet">
-		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<title>Recrutoo</title>
+		<!-- <link href="../static/css/bootstrap.min.css"" rel="stylesheet">
+		<link href="../static/css/animate.css" rel="stylesheet">
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/../static/css/font-awesome.min.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Work%20Sans:400,300,700' rel='stylesheet' type='text/css'>
-		<link href="{% static 'css/styles.css' %}" rel="stylesheet">
-		<link href="{% static 'css/queries.css' %}" rel="stylesheet">
+		<link href="../static/css/styles.css" rel="stylesheet">
+		<link href="../static/css/queries.css" rel="stylesheet"> -->
+		<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../static/css/animate.css" rel="stylesheet">
+		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/../static/css/font-awesome.min.css" rel="stylesheet">
+		<link href='http://fonts.googleapis.com/css?family=Work%20Sans:400,300,700' rel='stylesheet' type='text/css'>
+		<link href="../static/css/styles.css" rel="stylesheet">
+		<link href="../static/css/queries.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
@@ -19,31 +25,33 @@
 				<div class="container">
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
-							<a href="#" style="color: white"><h3>Recruitto</h3></a>
+							<a href="#" style="color: white"><h3><img src="../static/images/Recrutoo.png" style="width: 20%;"></h3></a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
-							<p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a>
+							<!-- <p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a> -->
 						</div>
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown">Company Tagline.</h1>
-							<a href="{% url 'initial-signin' %}" class="use-btn animated fadeInUp">Get Started</a>
+							<center><h1 class="animated fadeInDown">The next generation recruitment platform.</h1>
+								<p class="animated fadeInDown" style="margin-top: -35px">Create beautiful 'Careers' pages and track applicants.<br>
+								<b>Absolutely Free!</b></p>
+							<a href="{% url 'initial-signin" class="use-btn animated fadeInUp">Get Started</a></center>
 						</div>
 					</div>
 				</div>
 			</section>
 		</header>
-		<div class="overlay overlay-boxify">
+		<!-- <div class="overlay overlay-boxify">
 			<nav>
 				<ul>
 					<li><a href="#about"><i class="fa fa-heart"></i>About</a></li>
 					<li><a href="#features"><i class="fa fa-flash"></i>Features</a></li>
 				</ul>
 			</nav>
-		</div>
-    	<script src="{% static 'js/jquery.min.js' %}"></script>
-		<script src="{% static 'js/bootstrap.min.js' %}"></script>
-		<script src="{% static 'js/min/scripts-min.js' %}"></script>
+		</div> -->
+    	<script src="../static/js/jquery.min.js"></script>
+		<script src="../static/js/bootstrap.min.js"></script>
+		<script src="../static/js/min/scripts-min.js"></script>
 	</body>
 </html>
