--- a/registration/static/css/joblist.css
+++ b/registration/static/css/joblist.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Work Sans';
+  font-weight: 400;
+}
 .collapsible-header b{
   font-size: 130%!important;
 }
@@ -29,6 +33,18 @@
   background: #4eb7f5;
   color: white;
   transition: 0.4s;
+}
+
+#single-job{
+  padding: 5% 0%;
+}
+
+#single-job .container{
+  border: 1px solid #ccc;
+  padding: 2%;
+}
+#single-job p{
+  font-size: 120%;
 }
 
 @media only screen and (min-device-width: 300px) and (max-device-width: 600px){
