--- a/registration/templates/details.html
+++ b/registration/templates/details.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
-    <link rel="stylesheet" href='{% static "css/login.css" %}'>
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/materialize.js'%}"></script>
-    <script src="{% static 'js/angular.min.js' %}"></script>
-    <script src="{% static 'js/angular-script.js' %}"></script>
+    <!-- {% load static %} -->
+    <link rel="stylesheet" href="../static/css/materialize.min.css">
+    <link rel="stylesheet" href="../static/css/login.css" >
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/materialize.js"></script>
+    <script src="../static/js/angular.min.js"></script>
+    <script src="../static/js/angular-script.js"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,300" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/../static/css/font-awesome.min.css">
     <title>Login Details</title>
   </head>
   <body ng-app="app" ng-controller="detailsController" id="details">
     <div class="container">
       <div class="row">
         <h1>Tell us about you</h1>
-        <form method="POST" action="{% url 'companyinfo' %}" enctype="multipart/form-data">{% csrf_token %}
-          
+        <form method="POST" action="{% url 'companyinfo" name="detailsForm" enctype="multipart/form-data">{% csrf_token %}
+
            <div class="input-field">
             <h5>Company Name</h5>
             <input type="checkbox" class="filled-in" ng-model="isImage" name="isImage" id="filled-in-box" checked="checked" />
@@ -34,10 +34,12 @@
           <div class="input-field" ng-if="!isImage">
             <input id="id_company_name" type="text" class="validate" name="company_name">
             <label for="id_company_name">Company Name</label>
+            <p class="red-text" style="font-size: 120%">Some Error</p>
           </div>
           <div class="input-field">
-            <input id="id_company_url" name='company_url' type="url" class="validate">
+            <input id="id_company_url" name='company_url' type="text" ng-pattern="urlRegex" ng-model="url" ng-class="{valid: detailsForm.company_url.$valid && url.length > 0, invalid: !detailsForm.company_url.$valid}">
             <label for="id_company_url">Company Url</label>
+            <p ng-if="!detailsForm.company_url.$valid" class="red-text" font-size="120%">Invalid URL</p>
           </div>
           <div class="input-field">
             <input id="id_company_email" type="email"  name="company_email">
@@ -50,11 +52,8 @@
           <div >
             <label for="id_company_logo" class="custom-file">Logo</label>
             <input id="id_company_logo" type="file" class="custom-file-input" name="company_logo">
-            
           </div>
-
-          
-          <div class="bt" style="text-align: center"><button class="btn-custom">Submit</button></div>
+          <div class="bt" style="text-align: center"><button class="btn-custom" ng-disabled="!detailsForm.$valid">Submit</button></div>
         </form>
       </div>
     </div>
