--- a/registration/templates/addjob.html
+++ b/registration/templates/addjob.html
@@ -44,7 +44,7 @@
                 <label for="id_jobDescription">Job Description</label>
               </div>
               <div class="input-field">
-                <input type="text" id="id_requirement" name="requirement" class="validate">
+                <textarea id="id_requirement" name="requirement" class="validate materialize-textarea"></textarea>
                 <label for="id_requirement">Requirements</label>
               </div>
               <div class="input-field">
