--- a/registration/static/css/login.css
+++ b/registration/static/css/login.css
@@ -27,6 +27,13 @@ form{
       border: 2px solid #3899ec;
       background-color: #3899ec;
  }
+textarea.materialize-textarea:focus:not([readonly]){
+  border-bottom: 1px solid #3899ec!important;
+  box-shadow: 0 1px 0 0 #3899ec;
+}
+textarea.materialize-textarea:focus:not([readonly])+label{
+  color: #3899ec;
+}
 .forgot{
   margin-top: 25px;
 }
