--- a/registration/templates/addjob.html
+++ b/registration/templates/addjob.html
@@ -68,7 +68,7 @@
                 <label for="id_hiringManager">Hiring Manager Email</label>
               </div>
               <div class="input-field">
-                <input type="checkbox" class="filled-in" id="id_publish" name="publish" class="validate">
+                <input type="checkbox" class="filled-in" id="id_publish" name="publish" class="validate" checked>
                 <label for="id_publish">Publish?</label>
               </div><br>
               <center><div class="bt"><button class="btn-custom">Post</button></div></center>
