--- a/registration/static/css/styles.css
+++ b/registration/static/css/styles.css
@@ -60,7 +60,7 @@ html {
 */
 html, button, input, select, textarea {
     font-family: sans-serif;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 html, body {
     overflow-x: hidden;
@@ -72,7 +72,7 @@ html, body {
 */
 body {
     margin: 0;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /*
