--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -5,16 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Recrutoo</title>
-		<!-- <link href="../static/css/bootstrap.min.css"" rel="stylesheet">
-		<link href="../static/css/animate.css" rel="stylesheet">
-		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/../static/css/font-awesome.min.css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Work%20Sans:400,300,700' rel='stylesheet' type='text/css'>
-		<link href="../static/css/styles.css" rel="stylesheet">
-		<link href="../static/css/queries.css" rel="stylesheet"> -->
 		<link href="../static/css/bootstrap.min.css" rel="stylesheet">
 		<link href="../static/css/animate.css" rel="stylesheet">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/../static/css/font-awesome.min.css" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Work%20Sans:400,300,700' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 		<link href="../static/css/styles.css" rel="stylesheet">
 		<link href="../static/css/queries.css" rel="stylesheet">
 	</head>
@@ -25,15 +19,18 @@
 				<div class="container">
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
-							<a href="#" style="color: white"><h3><img src="../static/images/Recrutoo.png" style="width: 20%;"></h3></a>
+							<a href="#"><img src="../static/images/Recrutoo.png" style="width: 20%;"></a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
 							<!-- <p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a> -->
 						</div>
 					</div>
-					<div class="row hero-content">
+					<div class="row hero-content" style="top: -100px;position: relative;">
 						<div class="col-md-12">
-							<center><h1 class="animated fadeInDown">The next generation recruitment platform.</h1>
+							<center>
+								<h1 class="animated fadeInDown hidden-sm-down">Recrutoo<br>The next generation recruitment platform.</h1>
+								<h1 class="animated fadeInDown hidden-md-up">Recrutoo</h1>
+								<p class="animated fadeInDown hidden-md-up">The next generation recruitment platform.<br><br></p>
 								<p class="animated fadeInDown" style="margin-top: -35px">Create beautiful 'Careers' pages and track applicants.<br>
 								<b>Absolutely Free!</b></p>
 							<a href="{% url 'initial-signin" class="use-btn animated fadeInUp">Get Started</a></center>
@@ -55,3 +52,15 @@
 		<script src="../static/js/min/scripts-min.js"></script>
 	</body>
 </html>
+<style>
+	@media only screen and  (min-device-width: 300px) and (max-device-width: 600px){
+		.hidden-sm-down{
+			display: none;
+		}
+	}
+	@media only screen and (min-device-width: 700px){
+		.hidden-md-up{
+			display: none;
+		}
+	}
+</style>
