--- a/registration/templates/jobdetail.html
+++ b/registration/templates/jobdetail.html
@@ -15,6 +15,7 @@
   <body ng-app="app" ng-controller="jobDetailController">
     <div class="container">
       <h1>Job Details</h1>
+      <p class="right">Company: Test</p>
       <table>
         <tr>
           <th>Job Name</th>
