--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -8,7 +8,7 @@
 		<link href="../static/css/bootstrap.min.css" rel="stylesheet">
 		<link href="../static/css/animate.css" rel="stylesheet">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/../static/css/font-awesome.min.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Courgette|Montserrat:400,700" rel="stylesheet">
 		<link href="../static/css/styles.css" rel="stylesheet">
 		<link href="../static/css/queries.css" rel="stylesheet">
 	</head>
@@ -25,15 +25,17 @@
 							<!-- <p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a> -->
 						</div>
 					</div>
-					<div class="row hero-content" style="top: -100px;position: relative;">
+					<div class="row hero-content" style="top: -150px;position: relative;">
 						<div class="col-md-12">
 							<center>
-								<h1 class="animated fadeInDown hidden-sm-down">Recrutoo<br>The next generation recruitment platform.</h1>
-								<h1 class="animated fadeInDown hidden-md-up">Recrutoo</h1>
+								<span class="hide-md-up"><br><br><br></span>
+								<h1 class="animated fadeInDown hidden-sm-down"><span class="corgette">Recrutoo</span><br>The next generation recruitment platform.</h1>
+								<h1 class="animated fadeInDown hidden-md-up corgette">Recrutoo</h1>
 								<p class="animated fadeInDown hidden-md-up">The next generation recruitment platform.<br><br></p>
-								<p class="animated fadeInDown" style="margin-top: -35px">Create beautiful 'Careers' pages and track applicants.<br>
-								<b>Absolutely Free!</b></p>
-							<a href="{% url 'initial-signin" class="use-btn animated fadeInUp">Get Started</a></center>
+								<p class="animated fadeInDown" style="margin-top: -35px; font-size: 150%">Create beautiful 'Careers' pages and track applicants.<br>
+								<b style="font-size: 180%">Absolutely Free!</b></p>
+							<a href="{% url 'initial-signin" class="use-btn animated fadeInUp">Get Started</a>
+						</center>
 						</div>
 					</div>
 				</div>
