--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -25,14 +25,14 @@
 							<!-- <p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a> -->
 						</div>
 					</div>
-					<div class="row hero-content" style="top: -150px;position: relative;">
+					<div class="row hero-content" style="top: -200px;position: relative;">
 						<div class="col-md-12">
 							<center>
 								<span class="hide-md-up"><br><br><br></span>
 								<h1 class="animated fadeInDown hidden-sm-down"><span class="corgette">Recrutoo</span><br>The next generation recruitment platform.</h1>
 								<h1 class="animated fadeInDown hidden-md-up corgette">Recrutoo</h1>
-								<p class="animated fadeInDown hidden-md-up">The next generation recruitment platform.<br><br></p>
-								<p class="animated fadeInDown" style="margin-top: -35px; font-size: 150%">Create beautiful 'Careers' pages and track applicants.<br>
+								<p class="animated fadeInDown hidden-md-up" style="font-size: 120%">The next generation recruitment platform.<br><br></p>
+								<p class="animated fadeInDown" style="margin-top: -35px; font-size: 160%"><span class="hidden-md-up"><br><br><br><br></span>Create beautiful 'Careers' pages and track applicants.<br>
 								<b style="font-size: 180%">Absolutely Free!</b></p>
 							<a href="{% url 'initial-signin" class="use-btn animated fadeInUp">Get Started</a>
 						</center>
