--- a/registration/static/css/styles.css
+++ b/registration/static/css/styles.css
@@ -478,7 +478,7 @@ Buttons
     font-size: 16px;
 }
 .use-btn:hover, .use-btn:focus {
-    background-color: #73d0da;
+    background-color: #3889ec;
     color: #fff!important;
     text-decoration: none;
 }
