--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -19,20 +19,22 @@
 				<div class="container">
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
-							<a href="#"><img src="../static/images/Recrutoo.png" style="width: 20%;"></a>
+							<a href="#"></a>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
 							<!-- <p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a> -->
 						</div>
 					</div>
-					<div class="row hero-content" style="top: -200px;position: relative;">
+					<div class="row hero-content" style="top: -250px;position: relative;">
 						<div class="col-md-12">
 							<center>
-								<span class="hide-md-up"><br><br><br></span>
+								<br><br><br><br>
+								<span class="hide-md-up"><br><br><br><br><br></span>
 								<h1 class="animated fadeInDown hidden-sm-down"><span class="corgette">Recrutoo</span><br>The next generation recruitment platform.</h1>
 								<h1 class="animated fadeInDown hidden-md-up corgette">Recrutoo</h1>
+								<span class="hidden-md-up"><br><br></span>
 								<p class="animated fadeInDown hidden-md-up" style="font-size: 120%">The next generation recruitment platform.<br><br></p>
-								<p class="animated fadeInDown" style="margin-top: -35px; font-size: 160%"><span class="hidden-md-up"><br><br><br><br></span>Create beautiful 'Careers' pages and track applicants.<br>
+								<p class="animated fadeInDown" style="margin-top: -35px; font-size: 160%"><span style="font-size: 170%;">Create beautiful</span> 'Careers' pages and track applicants.<br>
 								<b style="font-size: 180%">Absolutely Free!</b></p>
 							<a href="{% url 'initial-signin" class="use-btn animated fadeInUp">Get Started</a>
 						</center>
