--- a/registration/templates/singleJob.html
+++ b/registration/templates/singleJob.html
@@ -14,10 +14,9 @@
   </head>
   <body ng-app="app" ng-controller="singleJobController" id="single-job">
     <div class="container">
-      <center>
-        <h3>Job Name</h3>
-        <p class="grey-text">Job Location</p>
-      </center>
+        <h3 class="center">Job Name</h3>
+        <p style="font-size: 150%;">Company: Test</p>
+        <p class="grey-text center">Job Location</p>
       <hr><br>
       <b>About Us</b>
       <p>About the company</p>
