--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -35,7 +35,7 @@
 								<span class="hidden-md-up"><br><br></span>
 								<p class="animated fadeInDown hidden-md-up" style="font-size: 120%;"><span class="raleway white-text">The Next Generation <br> Recruitment Platform.<br><br></span></p>
 								<p class="animated fadeInDown" style="margin-top: -35px; font-size: 160%;"><span style="font-size: 170%;">Create beautiful</span> 'Careers' pages and track applicants.<br>
-								<b style="font-size: 180%;color: black!important">Absolutely Free!</b></p>
+								<b style="font-size: 180%;color: black!important"><br>Absolutely Free!</b></p>
 							<a href="{% url 'initial-signin" class="use-btn animated fadeInUp">Get Started</a>
 						</center>
 						</div>
