--- a/registration/templates/details.html
+++ b/registration/templates/details.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,300" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/../static/css/font-awesome.min.css">
     <title>Login Details</title>
+		<link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../static/favicon.ico" type="image/x-icon">
   </head>
   <body ng-app="app" ng-controller="detailsController" id="details">
     <div class="container">
