--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -11,6 +11,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Courgette|Montserrat:400,700|Raleway:800" rel="stylesheet">
 		<link href="../static/css/styles.css" rel="stylesheet">
 		<link href="../static/css/queries.css" rel="stylesheet">
+		<link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../static/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<header>
@@ -43,6 +45,9 @@
 				</div>
 			</section>
 		</header>
+		<footer style="background: #555;padding: 30px 0;">
+			<h1 class="" style="text-align: center;">Got Any Queries?<br>Mail Us at: <br> <a href="mailto:xyz@gmail.com">xyz@gmail.com</a></h1>
+		</footer>
 		<!-- <div class="overlay overlay-boxify">
 			<nav>
 				<ul>
@@ -51,6 +56,7 @@
 				</ul>
 			</nav>
 		</div> -->
+
     	<script src="../static/js/jquery.min.js"></script>
 		<script src="../static/js/bootstrap.min.js"></script>
 		<script src="../static/js/min/scripts-min.js"></script>
