--- a/registration/templates/resetpasswordcomplete.html
+++ b/registration/templates/resetpasswordcomplete.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,300" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Reset Password</title>
+		<link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../static/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="container">
